--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -108,7 +108,8 @@ ul li:first-child {
 .header div {
   position: absolute;
   width: 100%;
-  height: 100%;
+  border-radius: 1rem;
+  height: 99%;
   background-color: hsla(178, 100%, 50%, 0.377);
   display: flex;
   justify-content: center;
@@ -119,6 +120,7 @@ ul li:first-child {
 
 .header div:hover {
   cursor: pointer;
+  transition: 0.3s;
   opacity: 1;
 }
 
